Fix icon alignment in large buttons

--- a/packages/bpk-tokens/tokens/base.default.scss
+++ b/packages/bpk-tokens/tokens/base.default.scss
@@ -400,6 +400,10 @@ $bpk-grid-gutter: 1.5rem !default;
 $bpk-grid-container-padding: 1.5rem !default;
 /// @group grids
 $bpk-grid-container-mobile-padding: .75rem !default;
+/// @group icons
+$bpk-icon-size-sm: 1.125rem !default;
+/// @group icons
+$bpk-icon-size-lg: 1.5rem !default;
 /// @group modals
 $bpk-modal-scrim-background-color: rgb(178, 174, 189) !default;
 /// @group modals
